// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a pending search dialog (google_web_search) 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a shell tool 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  run_shell_command                                                                         │
│                                                                                              │
│ Running command...                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for an empty slice following a search tool 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
